# Treemble

./: .gitignore  README.md  fullcode.txt  package.json  pnpm-lock.yaml  tipEditor.html  vite.config.ts
.github/workflows/: tauri.yml
public/: tipEditor.html
src/: App.css  App.tsx  fullcode.txt  tipEditor.css  tipEditor.tsx
src-tauri/: Cargo.toml  build_log.txt  tauri.conf.json
src-tauri/capabilities/: cross-window-events.json  default.json  fs-autosave.json  open.json  save.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  node_detect.rs
src/components/: CanvasPanel.tsx  Toolbar.tsx
src/components/modals/: AboutModal.tsx  BlankCanvasModal.tsx  EqualizeModal.tsx  NewickModal.tsx  OptionsModal.tsx  QuickStartModal.tsx  ShortcutsModal.tsx  UnitsPrompt.tsx
src/context/: CanvasContext.tsx
src/hooks/: useAutosave.tsx  useCanvasMouseHandlers.tsx  useCanvasState.ts  useDragAndDrop.ts  useKeyboardShortcuts.ts  useOutsideClick.tsx  useSketchLayer.ts  useSketchUndoRedo.ts  useUndoRedo.ts
src/types/: nodeDetect.ts
src/utils/: TreeGeometry.ts  csvHandlers.ts  detectTips.ts  exportCSV.ts  exportTreeSVG.ts  tree.ts  useDragAndDrop.ts
