[package]
name = "treemble"
version = "1.3.2"
description = "Interactive phylogenetic tree builder and extractor"
authors = ["John B. Allard <johnalrd@umich.edu>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri                 = { version = "2.5.0", features = ["protocol-asset"] }
tauri-plugin-fs       = "2.2.1"   # latest 2.x that exists
tauri-plugin-dialog   = "2.2.1"   # latest 2.x that exists
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
log                   = "0.4"
tauri-plugin-opener = "2.2.7"
