[package]
name = "treemble"
version = "1.6.0"
description = "Interactive phylogenetic tree builder and extractor"
authors = ["John B. Allard <johnalrd@umich.edu>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.9.4", features = [] }

[dependencies]
tauri                 = { version = "2.9.4", features = ["protocol-asset"] }
tauri-plugin-fs       = "2.4.4"
tauri-plugin-dialog   = "2.4.2"
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
log                   = "0.4"
tauri-plugin-opener = "2.5.2"
image                 = "0.25"
base64                = "0.22"
once_cell             = "1.19"
ort                   = "2.0.0-rc.10"
reqwest               = { version = "0.12", features = ["blocking"] }
